<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/LoginViewLogo"
        android:contentDescription="@string/defaultLogoDescription"
        android:layout_width="@dimen/default_logo_size"
        android:layout_height="@dimen/default_logo_size"
        android:background="@mipmap/default_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/LoginViewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LoginViewLogo"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/defaultTitle"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/default_title_size"
        />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/LoginViewLoginLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LoginViewTitle"
        android:layout_marginTop="30dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        >

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/LoginViewLoginInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/LoginViewLoginInputLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/defaultInputColor"
                android:textSize="@dimen/default_label_size"
                android:text="@string/defaultLoginHint"
                android:labelFor="@id/LoginViewLoginEditText"
                android:layout_marginStart="4dp"/>
            <EditText
                android:id="@+id/LoginViewLoginEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/defaultLoginHint"
                android:textColor="@color/defaultInputColor"
                android:textColorHint="@color/defaultInputColor"
                android:backgroundTint="@color/defaultInputColor"
                android:imeActionId="1"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />
            <TextView
                android:id="@+id/LoginViewLoginInputError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="@dimen/default_error_size"
                android:textColor="@color/defaultErrorColor"
                android:layout_marginStart="4dp"/>
        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/LoginViewPasswordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/LoginViewLoginInputLayout">

            <TextView
                android:id="@+id/LoginViewPasswordInputLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/defaultInputColor"
                android:textSize="@dimen/default_label_size"
                android:text="@string/defaultPasswordHint"
                android:labelFor="@id/LoginViewPasswordEditText"
                android:layout_marginStart="4dp"/>

            <EditText
                android:id="@+id/LoginViewPasswordEditText"
                android:hint="@string/defaultPasswordHint"
                android:textColor="@color/defaultInputColor"
                android:textColorHint="@color/defaultInputColor"
                android:backgroundTint="@color/defaultInputColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:imeActionId="1"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:drawableTint="@color/defaultInputColor"
                android:drawableRight="@drawable/ic_visibility_black_24dp"
                />

            <TextView
                android:id="@+id/LoginViewPasswordInputError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/default_error_size"
                android:textColor="@color/defaultErrorColor"
                android:gravity="end"
                android:layout_marginStart="4dp"/>
        </android.support.v7.widget.LinearLayoutCompat>








    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/LoginViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultForgotPassword"
        android:layout_marginTop="10dp"
        android:layout_marginRight="6dp"
        android:layout_marginEnd="6dp"
        android:textColor="@color/defaultForgotPasswordColor"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LoginViewLoginLayout"/>


    <Button
        android:id="@+id/LoginViewSubmitButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LoginViewForgotPassword"
        android:fontFamily="@font/roboto_regular"
        android:backgroundTint="@color/defaultSubmitBackgroundColor"
        android:text="@string/defaultSubmitText"
        android:textColor="@color/defaultSubmitTextColor"
        />

</android.support.constraint.ConstraintLayout>